js/src/tests/test262/built-ins/Error/prototype/stack/setter-not-a-constructor.js

















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

assert.sameValue(
  isConstructor(set),
  false,
  'isConstructor(set Error.prototype.stack) must return false'
);

assert.throws(TypeError, function () {
  new set('');
});

reportCompare(0, 0);
